...
 * @param park The park where the event takes place.
 */
@Composable
fun EventOverviewScreen(navigationActions: NavigationActions, event: Event, park: Park) {

  Scaffold(
      modifier = Modifier.fillMaxSize().testTag("eventOverviewScreen"),
      topBar = { EventTopBar(title = event.title, navigationActions = navigationActions) },
      bottomBar = {
        EventBottomBar(participants = event.participants, maxParticipants = event.maxParticipants)
      }) { padding ->
        Box(modifier = Modifier.fillMaxSize().testTag("eventContent")) {
          Column(modifier = Modifier.padding(padding).fillMaxHeight()) {
...
fun EventTopBar(title: String, navigationActions: NavigationActions) {
  CenterAlignedTopAppBar(
      colors =
          TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.surface),
      modifier = Modifier.testTag("EventTopBar"),
      title = {
        Text(modifier = Modifier.testTag("eventTitle"), text = title, fontWeight = FontWeight.Bold)
      },
      navigationIcon = {
        IconButton(
            modifier = Modifier.testTag("goBackButton"), onClick = { navigationActions.goBack() }) {
              Icon(Icons.AutoMirrored.Filled.ArrowBack, "Back")
            }
...
  Column {
    Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.CenterVertically) {
      Icon(
          Icons.Outlined.AccountCircle,
          contentDescription = "User",
          modifier = Modifier.padding(horizontal = 8.dp).testTag("ownerIcon"))
      Text("Organized by: ${event.owner}", modifier = Modifier.testTag("eventOwner"))
    }

    Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.CenterVertically) {
      Icon(
          Icons.Filled.DateRange,
          contentDescription = "Date",
          modifier = Modifier.padding(horizontal = 8.dp).testTag("dateIcon"))
      Text(event.date.toFormattedString(), modifier = Modifier.testTag("date"))
    }

    Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.CenterVertically) {
      Icon(
          Icons.TwoTone.Face,
          contentDescription = "participants",
          modifier = Modifier.padding(horizontal = 8.dp).testTag("participantsIcon"))
      Text(
          "Participants: ${event.participants}/${event.maxParticipants}",
          modifier = Modifier.testTag("participants"))
    }
  }
...
                    .heightIn(max = 220.dp) // Set the maximum height
                    .verticalScroll(rememberScrollState())) {
              when (uiState.collectAsState().value) {
                OverviewUiState.Details ->
                    Text(
                        event.description,
                        modifier = Modifier.padding(padding).testTag("eventDescription"))
                OverviewUiState.Participants ->
                    Text(
                        "show participants",
                        modifier = Modifier.padding(padding).testTag("participantsList"))
              }
            }
      }
}

/**
...
        modifier = Modifier.testTag("detailsTab"),
        icon = { Text("Details") },
        selected = state == OverviewUiState.Details,
        onClick = { uiState.value = OverviewUiState.Details })

    NavigationBarItem(
        modifier = Modifier.testTag("participantsTab"),
        icon = { Text("Participants") },
        selected = state == OverviewUiState.Participants,
        onClick = { uiState.value = OverviewUiState.Participants })
  }
}

...
