...
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Arrow Back Icon")
                  }
            })
      }) { innerPadding ->
        Box(modifier = Modifier.padding(innerPadding).fillMaxSize().testTag("addEventScreen")) {
          Column(
              modifier = Modifier.fillMaxWidth(),
              verticalArrangement = Arrangement.spacedBy(18.dp),
              horizontalAlignment = Alignment.CenterHorizontally) {
                Text(
                    text = "Event Creation",
...
                }
              },
              modifier =
                  Modifier.align(Alignment.BottomCenter)
                      .padding(40.dp)
                      .size(width = 150.dp, height = 40.dp)
                      .testTag("addEventButton"),
          ) {
            Text("Add new event")
          }
        }
      }
}
...
      value = title,
      onValueChange = {
        title = it
        event.title = title
      },
      label = { Text("What kind of event do you want to create?") },
      modifier = Modifier.testTag("titleTag").fillMaxWidth(0.9f).height(64.dp))
}

/**
 * Used to change the description of the event
 *
 * @param event the event that will be updated
...
      value = description,
      onValueChange = {
        description = it
        event.description = description
      },
      label = { Text("Describe your event:") },
      modifier = Modifier.testTag("descriptionTag").fillMaxWidth(0.9f).height(128.dp))
}

/**
 * Used to change the maximum number of participants of the event
 *
 * @param event the event that will be updated
...
            IconButton(
                modifier = Modifier.testTag("dateIcon"),
                onClick = { showDatePicker = !showDatePicker }) {
                  Icon(imageVector = Icons.Default.DateRange, contentDescription = "Select date")
                }
            IconButton(
                modifier = Modifier.testTag("timeIcon"),
                onClick = { showTimePicker = !showTimePicker }) {
                  Icon(imageVector = Icons.Outlined.AccessTime, contentDescription = "Select time")
                }
          }
        },
        modifier = Modifier.fillMaxWidth().height(64.dp))
...
                    .background(MaterialTheme.colorScheme.surface)
                    .padding(16.dp)) {
              DatePicker(state = datePickerState, showModeToggle = false)
            }

        Button(
            modifier = Modifier.offset(x = 280.dp, y = 140.dp).testTag("validateDate"),
            onClick = {
              showDatePicker = false

              event.date =
                  datePickerState.selectedDateMillis
                      ?.let { TimeUnit.MILLISECONDS.toSeconds(currentTimeSelection!!) }
...
                    .offset(y = 10.dp)
                    .background(MaterialTheme.colorScheme.surface)
                    .align(Alignment.Center)) {
              TimePicker(state = timePickerState, modifier = Modifier.fillMaxWidth())

              Button(
                  modifier = Modifier.testTag("validateTime"),
                  onClick = {
                    showTimePicker = false

                    event.date =
                        datePickerState.selectedDateMillis
                            ?.let { TimeUnit.MILLISECONDS.toSeconds(currentTimeSelection!!) }
...
