...
  parkViewModel.updateCurrentParkNameNominatim()

  val showRatingDialog = remember { mutableStateOf(false) }

  val context = LocalContext.current

  Box(modifier = Modifier.padding(innerPadding).fillMaxSize().testTag("parkOverviewScreen")) {
    Column {
      ImageTitle(image = null, park = currentPark.value)

      Row(modifier = Modifier.fillMaxWidth(), verticalAlignment = Alignment.CenterVertically) {
        ParkDetails(park = currentPark.value, showRatingDialog, currentUser)
        FlowRow(
...
      trailingContent = {
        Button(
            onClick = {
              eventViewModel.setCurrentEvent(event)
              navigationActions.navigateTo(Screen.EVENT_OVERVIEW)
            },
            modifier = Modifier.size(width = 80.dp, height = 48.dp).testTag("eventButton"),
            colors = ColorPalette.BUTTON_COLOR,
            contentPadding = PaddingValues(0.dp)) {
              Text(
                  context.getString(R.string.ParkOverviewEventButton),
                  modifier = Modifier.testTag("eventButtonText"))
            }
...
}

@Composable
fun CreateEventButton(navigationActions: NavigationActions) {
  IconButton(
      onClick = { navigationActions.navigateTo(Screen.ADD_EVENT) },
      modifier = Modifier.testTag("createEventButton")) {
        Box(
            modifier =
                Modifier.size(38.dp)
                    .background(color = ColorPalette.INTERACTION_COLOR_DARK, shape = CircleShape)
                    .padding(2.dp)) {
              Icon(
...
